--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -19,7 +19,7 @@
   display: flex;
   margin: 0 auto;
   justify-content: space-between;
-  width: calc(100% - .5rem);
+  width: calc(100% - 1.05rem);
   background-color: #fff;
 
   padding: 1.1rem 0;
